# liars-dice

./: .Justfile  .commitlintrc.mjs  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  README.md  RULES.md  leaderboard.yaml  pyproject.toml
.github/scripts/: evaluate_v1.py  lb_delete.py  lb_owner.py  lb_update_name.py  register_player.py  reset_season.py  run_season.py
.github/workflows/: auto-update-player-prs.yml  guard-non-player-prs.yml  liars-dice.yml  lint.yml  register-player.yml  release.yml  run-monday.yml  run-season.yml  sync-wiki.yml  update-leaderboard.yml
docs/plans/: 2026-06-08-relegation-league-system.md  2026-06-10-duplicate-name-display.md  2026-06-11-relegation-cascade-settlement.md  2026-06-18-gamecontext-v2.md
docs/specs/: 2026-06-08-relegation-league-system-design.md  2026-06-10-duplicate-name-display-design.md  2026-06-11-relegation-cascade-settlement-design.md  2026-06-15-tier-in-algo-design.md
docs/wiki/: Home.md  Player-Guide.md  Rules.md
examples/players/: example.py
examples/tests/: test_example.py
game/: __main__.py  validate.py
game/components/: context.py  leaderboard.py  script.py  (+3 more)
players/: alice.py  bruno.py  calculated.py  cleo.py  columbo.py  deepthought.py  diego.py  evilstewie.py  finn.py  honestabe.py  meg.py  nuke.py  peterbeter.py  petergriffin.py  pyro.py  remy.py  sloane.py  stewie.py
tests/: conftest.py  test_context.py  test_leaderboard.py  test_main.py  test_player_stats_equivalence.py  test_register_player.py  test_run_season.py  test_validate_player.py
(+2 files in other folders)
