[project]
name = "liars-dice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pandas", "pyyaml"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.15"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]                # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests", "examples/tests"]
